force-app/main/default/objects/HealthModuleScore__c/HealthModuleScore__c.object-meta.xml
<CustomObject>
    <label>Health Module Score</label>
    <pluralLabel>Health Module Scores</pluralLabel>
    <nameField>
        <label>Health Module Score Name</label>
        <type>AutoNumber</type>
        <displayFormat>HMS-{00000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>One record per module per scan. Stores the 0-100 score, weighted contribution, finding counts, and execution metadata for a single health check module.</description>
</CustomObject>