force-app/main/default/objects/HealthModuleScore__c/fields/CriticalCount__c.field-meta.xml
<CustomField>
    <fullName>CriticalCount__c</fullName>
    <label>Critical Count</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>