force-app/main/default/objects/HealthModuleScore__c/fields/DurationMs__c.field-meta.xml
<CustomField>
    <fullName>DurationMs__c</fullName>
    <label>Duration (ms)</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
</CustomField>