force-app/main/default/objects/HealthModuleScore__c/fields/HealthScan__c.field-meta.xml
<CustomField>
    <fullName>HealthScan__c</fullName>
    <label>Health Scan</label>
    <type>MasterDetail</type>
    <referenceTo>HealthScan__c</referenceTo>
    <relationshipLabel>Health Module Scores</relationshipLabel>
    <relationshipName>HealthModuleScores</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>