force-app/main/default/objects/HealthModuleScore__c/fields/HighCount__c.field-meta.xml
<CustomField>
    <fullName>HighCount__c</fullName>
    <label>High Count</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>