force-app/main/default/objects/HealthModuleScore__c/fields/InfoCount__c.field-meta.xml
<CustomField>
    <fullName>InfoCount__c</fullName>
    <label>Info Count</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>