force-app/main/default/objects/HealthModuleScore__c/fields/LowCount__c.field-meta.xml
<CustomField>
    <fullName>LowCount__c</fullName>
    <label>Low Count</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>