force-app/main/default/objects/HealthModuleScore__c/fields/MediumCount__c.field-meta.xml
<CustomField>
    <fullName>MediumCount__c</fullName>
    <label>Medium Count</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>