force-app/main/default/objects/HealthModuleScore__c/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <label>Module</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Security</fullName><default>false</default><label>Security</label></value>
            <value><fullName>Automation</fullName><default>false</default><label>Automation</label></value>
            <value><fullName>CodeQuality</fullName><default>false</default><label>Code Quality</label></value>
            <value><fullName>Metadata</fullName><default>false</default><label>Metadata</label></value>
            <value><fullName>DataQuality</fullName><default>false</default><label>Data Quality</label></value>
            <value><fullName>GovernorLimits</fullName><default>false</default><label>Governor Limits</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>