force-app/main/default/objects/HealthModuleScore__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <label>Score</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>1</scale>
</CustomField>