force-app/main/default/objects/HealthModuleScore__c/fields/WeightedContribution__c.field-meta.xml
<CustomField>
    <fullName>WeightedContribution__c</fullName>
    <label>Weighted Contribution</label>
    <formula>IF(NOT(ISBLANK(Score__c)) &amp;&amp; NOT(ISBLANK(Weight__c)), Score__c * Weight__c / 100, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>